# vala-completion

./: README.md
anjuta/: Makefile.am  plugin.vala
libafrodite/: .gitignore  Makefile  Makefile.am  README  afroditetest.vala  astdumper.vala  astmerger.vala  codedom.vala  completionengine.vala  datatype.vala  ellipsistype.vala  libafrodite.pc.in  parser.vala  parseresult.vala  queryresult.vala  resultitem.vala  sourcefile.vala  sourceitem.vala  sourcereference.vala  symbol.vala  symbolresolver.vala  utils.vala  voidtype.vala
libafrodite/tests/: Makefile  Makefile.am  completion-manager.vala  tests-basic-source.vala  tests-basic.vala  tests-integrity.vala  tests-var-source.vala  tests-var.vala
libafrodite/vapi/: glib-assert.vapi  libvala-0.18.vapi  utils.vapi
valaide/: bug_fix_completion.vapi  completion.vala  completion.valide-plugin  wscript_build
valaide/afrodite-provider/: afrodite-provider.vala  vtgutils.vala
valaide/afrodite-provider/afrodite/: Makefile.am  afroditetest.vala  ast.vala  astdumper.vala  astmerger.vala  completionengine.vala  constants.vala  datatype.vala  parser.vala  parseresult.vala  queryoptions.vala  sourcefile.vala  sourceitem.vala  sourcereference.vala  symbol.vala  symbolresolver.vala  utils.vala  voidtype.vala
valaide/valencia-provider/: scan_info.vala  valencia-provider.vala
valaide/valencia-provider/valencia/: AUTHORS  COPYING  INSTALL  NEWS  README  THANKS  autocomplete.vala  browser.vala  expression.vala  gedit-2.20.deps  gedit-2.20.vapi  gtk_util.vala  parser.vala  program.vala  scanner.vala  settings.vala  util.vala  valencia.gedit-plugin  valencia.gedit-plugin.m4  valencia.vala
valencia/: .gitignore  AUTHORS  INSTALL  Makefile  NEWS  README  autocomplete.vala  browser.vala  expression.vala  gtk_util.vala  parser.vala  program.vala  scanner.vala  settings.vala  util.vala  valencia.doap  valencia.plugin.m4  valencia.vala
